<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventanas.MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Estudio Diario"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btAlta"
        android:layout_width="93dp"
        android:layout_height="88dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_button"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:onClick="click_alta"
        android:padding="0dp"
        android:text="@string/bt_NuevoEstudio"
        android:textSize="50sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCopia"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:background="@drawable/round_button"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:onClick="click_copia"
        android:padding="0dp"
        android:text="@string/bt_copia"
        android:textSize="30sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btAlta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAlta"
        app:layout_constraintTop_toTopOf="@+id/btAlta" />

    <Button
        android:id="@+id/btRevert"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:background="@drawable/round_button"
        android:drawablePadding="0dp"
        android:includeFontPadding="false"
        android:onClick="click_revert"
        android:padding="0dp"
        android:text="@string/bt_revert"
        android:textSize="30sp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/btAlta"
        app:layout_constraintEnd_toStartOf="@+id/btAlta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btAlta" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btAlta"
        app:layout_constraintEnd_toEndOf="@+id/btAlta"
        app:layout_constraintStart_toStartOf="@+id/btAlta" />
</androidx.constraintlayout.widget.ConstraintLayout>